--- a/config/paypal.yml
+++ b/config/paypal.yml
@@ -9,12 +9,12 @@ test: &default
 
   # Credentials for Classic APIs
   app_id: APP-80W284485P519543T
-  username: jb-us-seller_api1.paypal.com
-  password: WX4WTU3S8MY44S7F
-  signature: AFcWxV21C7fd0v3bYYYRCpSSRl31A7yDhhsPUU2XhtMoZXsWHFxu-RWy
+  username: ericmargules_api1.gmail.com
+  password: 7K7KNNJX3XSQMTGZ
+  signature: AFcWxV21C7fd0v3bYYYRCpSSRl31AQxDViZYUw5YwcZFIVGAOoJaJhT5
   # # With Certificate
   # cert_path: "config/cert_key.pem"
-  sandbox_email_address: Platform.sdk.seller@gmail.com
+  sandbox_email_address: eric.i.margules-facilitator@gmail.com
 
   # # IP Address
   # ip_address: 127.0.0.1
